k8s/auth/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: default
spec:
  selector:
    app: keycloak-postgres
  ports:
    - port: 5432
      targetPort: 5432
